first version of the sql like syntax for macaque.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ INTERFACES= sql_base.cmi sql_types.cmi sql_parsers.cmi sql_keywords.cmi \
 		inner_sql.cmi \
 		sql.cmi check.cmi query.cmi \
 
-TARGETS=pa_macaque.cmo pa_bananas.cmo macaque.cma macaque.cmxa macaque.cmxs
+TARGETS=pa_macaque.cmo pa_sql.cmo pa_bananas.cmo macaque.cma macaque.cmxa macaque.cmxs
 
 %.cmo:
 	ocamlbuild -tag annot $@
